--- a/src/app/views/pages/caixa/nova-venda/nova-venda.component.html
+++ b/src/app/views/pages/caixa/nova-venda/nova-venda.component.html
@@ -470,7 +470,7 @@
                         margin-top: 3%;
                     "
                 >
-                    <button mat-button mat-raised-button color="primary">
+                    <button mat-button mat-raised-button color="primary" (click)="trocarTab()">
                         Adicionar Venda
                     </button>
                 </div>
