mudando value do mat option

--- a/src/app/views/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/views/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -10,9 +10,9 @@
         <mat-form-field appearance="standard" fxFlex="grow">
             <mat-label class="label">Categoria</mat-label>
             <mat-select [formControl]="campoFiltro">
-                <mat-option value="one">Todas</mat-option>
-                <mat-option value="two">Cabelo</mat-option>
-                <mat-option value="three">Barba</mat-option>
+                <mat-option value="todas">Todas</mat-option>
+                <mat-option value="cabelo">Cabelo</mat-option>
+                <mat-option value="barba">Barba</mat-option>
             </mat-select>
         </mat-form-field>
     </div>
