arrumando detalhe no html de nova venda

--- a/src/app/views/pages/caixa/nova-venda/nova-venda.component.html
+++ b/src/app/views/pages/caixa/nova-venda/nova-venda.component.html
@@ -28,7 +28,7 @@
                                     .get('responsavelVenda')
                                     .hasError('required')
                             "
-                            >Digite nome do responsável pela venda</mat-error
+                            >Digite o nome do responsável pela venda</mat-error
                         >
                     </mat-form-field>
                 </div>
