FEAT: Tela de Perfil da aplicação

--- a/src/@vex/layout/toolbar/toolbar-user/toolbar-user-dropdown/toolbar-user-dropdown.component.html
+++ b/src/@vex/layout/toolbar/toolbar-user/toolbar-user-dropdown/toolbar-user-dropdown.component.html
@@ -32,7 +32,7 @@
     <div class="dropdown-content">
         <a
             *ngFor="let item of items; trackBy: trackById"
-            (click)="close(item)"
+            (click)="close()"
             [routerLink]="item.route"
             class="notification"
             fxLayout="row"
@@ -84,7 +84,7 @@
                 </span>
             </ng-container>
         </button>
-        <a (click)="close()" color="primary" mat-button>LOGOUT</a>
+        <a (click)="sair()" color="primary" mat-button>LOGOUT</a>
     </div>
 </div>
 
