--- a/src/app/profile/perfil/perfil.component.html
+++ b/src/app/profile/perfil/perfil.component.html
@@ -12,7 +12,7 @@
 
       <img @scaleIn
            class="avatar h-24 w-24 flex-none align-start hidden sm:block border-3 border-white"
-           src="assets/img/avatars/1.jpg" alt="#">
+           src="assets/img/demo/logo.png" alt="#">
 
       <div class="max-w-full flex-auto sm:ltr:ml-6 sm:rtl:mr-6">
         <div class="h-16 flex items-center">
