--- a/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
+++ b/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
@@ -110,10 +110,10 @@
                             ? 'aceito'
                             : 'recusado' " mat-cell *matCellDef="let agendamento">
                     <mat-form-field appearance="standard">
-                        <mat-select [(value)]="agendamento.status">
-                            <mat-option value="pendente" (click)="abrirModalEditarStatus(agendamento)">Pendente</mat-option>
-                            <mat-option value="aceito" (click)="abrirModalEditarStatus(agendamento)">Aceito</mat-option>
-                            <mat-option value="recusado" (click)="abrirModalEditarStatus(agendamento)">Recusado</mat-option>
+                        <mat-select [value]="agendamento.status" (selectionChange)="abrirModalEditarStatus($event?.value, agendamento)">
+                            <mat-option value="pendente">Pendente</mat-option>
+                            <mat-option value="aceito">Aceito</mat-option>
+                            <mat-option value="recusado">Recusado</mat-option>
                         </mat-select>
                     </mat-form-field>
                 </td>
