--- a/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -1,15 +1,15 @@
-<div class="row">
+<div class="row" [formGroup]="form">
     <div class="col-md-6">
         <mat-form-field class="inptPes" appearance="standard" fxFlex="grow">
             <mat-label>Pesquisar produto</mat-label>
-            <input matInput />
+            <input matInput formControlName="filtro" (change)="filtrarProdutos()"/>
         </mat-form-field>
     </div>
 
     <div class="col-md-3">
         <mat-form-field appearance="standard" fxFlex="grow">
             <mat-label>Categoria</mat-label>
-            <mat-select>
+            <mat-select formControlName="categoria" (selectionchange)="filtrarProdutos()">
                 <mat-option value="todas">Todas</mat-option>
                 <mat-option value="cabelo">Cabelo</mat-option>
                 <mat-option value="barba">Barba</mat-option>
@@ -20,7 +20,7 @@
     <div class="col-md-3">
         <mat-form-field appearance="standard" fxFlex="grow">
             <mat-label>Status</mat-label>
-            <mat-select>
+            <mat-select formControlName="status" (selectionchange)="filtrarProdutos()">
                 <mat-option value="one">Todos</mat-option>
                 <mat-option value="two">Promocionais</mat-option>
             </mat-select>
@@ -31,7 +31,7 @@
 
 <div class="row" style="float: right;">
     <div class="col">
-        <button style="background-color: #262B39; color: rgb(240, 255, 255);" mat-button fxFlex="grow">Limpar
+        <button style="background-color: #262B39; color: rgb(240, 255, 255);" mat-button fxFlex="grow" (click)="limparFiltro()">Limpar
             <mat-icon>backspace</mat-icon></button>
     </div>
     <div class="col">
