--- a/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
+++ b/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
@@ -9,7 +9,7 @@
     <div class="col-md-2">
         <mat-form-field appearance="standard" fxFlex="grow">
             <mat-label>Status</mat-label>
-            <mat-select formControlName="status">
+            <mat-select formControlName="status" (selectionChange)="filtrarAgendamentos()">
                 <mat-option value="aceito">Aceito</mat-option>
                 <mat-option value="pendente">Pendente</mat-option>
                 <mat-option value="recusado">Recusado</mat-option>
