--- a/src/app/core/lib/components/modais/produto/cadastrar-produto/cadastrar-produto.component.html
+++ b/src/app/core/lib/components/modais/produto/cadastrar-produto/cadastrar-produto.component.html
@@ -1,106 +1,139 @@
 <div class="form">
-    <!-- Titulo do modal -->
-    <div class="px-6 py-4 border-b" id="title" fxLayout="row" fxLayoutAlign="start center">
-        <h2 class="title m-0">Novo Produto</h2>
-    </div>
+  <!-- Titulo do modal -->
+  <div class="px-6 py-4 border-b" id="title" fxLayout="row" fxLayoutAlign="start center">
+    <h2 class="title m-0">Novo Produto</h2>
+  </div>
 
 
-    <!-- modal -->
-    <mat-dialog-content>
-        <div [formGroup]="form" class="example-form">
+  <!-- modal -->
+  <mat-dialog-content>
+    <div [formGroup]="form" class="example-form">
+
+      <!-- formulario -->
+      <div class="formulario">
+        <div id="formul">
+          <!-- Imagem do servico -->
+          <div id="imagemPerf">
+            <div (click)="imagemPerfil.click()" style="margin-right: 10%;" class=" example-full-width">
+              <div class="centInputImg">
+                <div class="absolute">
+                  <label [hidden]="mostraIcone">
+                    <mat-icon>add_a_photo</mat-icon>
+                  </label>
+                  <input #imagemPerfil type="file" />
+                </div>
+                <div class="rounded-circle">
+                  <img (mouseover)="mostraIcone=false" (mouseout)="mostraIcone=true"
+                    class="foto avatar  flex-none align-start sm:block border-3 border-white"
+                    src="assets/img/dominadev/logo/logo-circular/png/logo-circular-2.png " alt="Imagem cliente">
+                </div>
+              </div>
+            </div>
+            <div class="textofoto">
+              <p>Foto do Servico (opcional)</p>
+            </div>
+          </div>
+
+          <div>
             <!-- Nome do servico -->
             <div class="nome">
-                <mat-form-field class="example-full-width" id="inpN" appearance="standard">
-                    <mat-label class="nome">Nome do produto</mat-label>
-                    <input formControlName="nome" matInput required />
-                    <mat-error *ngIf="form.get('nome').hasError('required')">
-                        Preencha este campo!
-                    </mat-error>
-                </mat-form-field>
+              <mat-form-field class="example-full-width" id="inpN" appearance="standard">
+                <mat-label class="nome">Nome do produto</mat-label>
+                <input formControlName="nome" matInput required />
+                <mat-error *ngIf="form.get('nome').hasError('required')">
+                  Preencha este campo!
+                </mat-error>
+              </mat-form-field>
             </div>
 
             <!-- Tempo estimado -->
             <div class="quantEstoque">
-                <mat-form-field id="quantEstoque" appearance="standard">
-                    <mat-label>Quantidade em Estoque</mat-label>
-                    <input formControlName="qtdEstoque" type="text" matInput placeholder="Digite a quantidade"
-                        maxlength="3" required />
-                    <mat-error *ngIf="form.get('qtdEstoque').hasError('required')">
-                        Preencha este campo!
-                    </mat-error>
-                </mat-form-field>
+              <mat-form-field id="quantEstoque" appearance="standard">
+                <mat-label>Quantidade em Estoque</mat-label>
+                <input formControlName="qtdEstoque" type="text" matInput placeholder="Digite a quantidade" maxlength="3"
+                  required />
+                <mat-error *ngIf="form.get('qtdEstoque').hasError('required')">
+                  Preencha este campo!
+                </mat-error>
+              </mat-form-field>
 
-                <!-- Categoria -->
-                <mat-form-field id="categoria" appearance="standard">
-                    <mat-label>Categoria</mat-label>
-                    <mat-select formControlName="categoria" required>
-                        <mat-option value="Cabelo Feminino">Cabelo Feminino</mat-option>
-                        <mat-option value="Cabelo Masculino">Cabelo Masculino</mat-option>
-                        <mat-option value="Unha">Unha</mat-option>
-                        <mat-option value="Pele">Pele</mat-option>
-                    </mat-select>
-                    <mat-error *ngIf="form.get('categoria').hasError('required')">
-                        Selecione uma opção!
-                    </mat-error>
-                </mat-form-field>
+              <!-- Categoria -->
+              <mat-form-field id="categoria" appearance="standard">
+                <mat-label>Categoria</mat-label>
+                <mat-select formControlName="categoria" required>
+                  <mat-option value="Cabelo Feminino">Cabelo Feminino</mat-option>
+                  <mat-option value="Cabelo Masculino">Cabelo Masculino</mat-option>
+                  <mat-option value="Unha">Unha</mat-option>
+                  <mat-option value="Pele">Pele</mat-option>
+                </mat-select>
+                <mat-error *ngIf="form.get('categoria').hasError('required')">
+                  Selecione uma opção!
+                </mat-error>
+              </mat-form-field>
             </div>
-
-            <!-- area de descricao -->
-            <div class="descricao">
-                <mat-form-field class="example-full-width" id="descricao" appearance="standard">
-                    <mat-label>Descrição do produto</mat-label>
-                    <input matInput placeholder="Ex. Tipo de corte, tipo de barba..." formControlName="descricao"
-                        type="text" />
-                </mat-form-field>
-            </div>
-
-            <!-- toggle de valor promocional -->
-            <div class="toggle">
-                <mat-slide-toggle><b>Este produto mostrará o valor promocional</b></mat-slide-toggle>
-            </div>
-
-            <!-- valor e valor promocional -->
-            <div class="valor">
-                <mat-form-field floatLabel="always" class="intval" appearance="standard">
-                    <mat-label>Valor</mat-label>
-                    <span matTextPrefix>R$&nbsp;</span>
-                    <input formControlName="valor" id="valor" matInput type="number" class="example-right-align"
-                        placeholder="0" />
-                    <mat-error *ngIf="form.get('valor').hasError('required')">
-                        Preencha este campo!
-                    </mat-error>
-                </mat-form-field>
-
-                <!-- valor promocional -->
-                <mat-form-field floatLabel="always" class="intval" appearance="standard">
-                    <mat-label>Valor Promocional</mat-label>
-                    <span matTextPrefix>R$&nbsp;</span>
-                    <input formControlName="valorPromocional" id="valorP" matInput type="number"
-                        class="example-right-align" placeholder="0" />
-                    <mat-error *ngIf="form.get('valorPromocional').hasError('required')">
-                        Preencha este campo!
-                    </mat-error>
-                </mat-form-field>
-            </div>
+          </div>
         </div>
-    </mat-dialog-content>
+        <!-- area de descricao -->
+        <div class="descricao">
+          <mat-form-field class="example-full-width" id="descricao" appearance="standard">
+            <mat-label>Descrição do produto</mat-label>
+            <input matInput placeholder="Ex. Tipo de corte, tipo de barba..." formControlName="descricao" type="text" />
+          </mat-form-field>
+        </div>
 
-        <!-- botoes adicionar e cancelar -->
-        <mat-dialog-actions align="end">
-            <button mat-button mat-dialog-close>Cancelar</button>
-            <button mat-button mat-raised-button color="primary" (click)="cadastrarEditarProduto()">
-                Adicionar
-            </button>
-        </mat-dialog-actions>
+        <!-- toggle de valor promocional -->
+        <div class="toggle">
+          <mat-slide-toggle><b>Este produto mostrará o valor promocional</b></mat-slide-toggle>
+        </div>
+        <div class="row">
+          <!-- valor e valor promocional -->
+        <div class="valor">
+          <mat-form-field floatLabel="always" class="intval col" appearance="standard">
+            <mat-label>Valor</mat-label>
+            <span matTextPrefix>R$&nbsp;</span>
+            <input formControlName="valor" id="valor" matInput type="number" class="example-right-align"
+              placeholder="0" />
+            <mat-error *ngIf="form.get('valor').hasError('required')">
+              Preencha este campo!
+            </mat-error>
+          </mat-form-field>
+
+          <!-- valor promocional -->
+          <mat-form-field floatLabel="always" class="intval col" appearance="standard">
+            <mat-label>Valor Promocional</mat-label>
+            <span matTextPrefix>R$&nbsp;</span>
+            <input formControlName="valorPromocional" id="valorP" matInput type="number" class="example-right-align"
+              placeholder="0" />
+            <mat-error *ngIf="form.get('valorPromocional').hasError('required')">
+              Preencha este campo!
+            </mat-error>
+          </mat-form-field>
+        </div>
+        </div>
+
+      </div>
+
+
+
+    </div>
+  </mat-dialog-content>
+
+  <!-- botoes adicionar e cancelar -->
+  <mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close>Cancelar</button>
+    <button mat-button mat-raised-button color="primary" (click)="cadastrarEditarProduto()">
+      Adicionar
+    </button>
+  </mat-dialog-actions>
 
 </div>
 <!-- LOADING -->
 <div *ngIf="load" id="vex-splash-screen-load">
-    <div class="wrapper">
-        <div class="ball-scale-multiple">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+  <div class="wrapper">
+    <div class="ball-scale-multiple">
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
+  </div>
 </div>
