--- a/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.scss
+++ b/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.scss
@@ -10,11 +10,35 @@
     #formul{
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      // align-items: center;
     }
 
     #imagemPerf{
-      width: 50%;
+      margin-right: 15px;
+      .foto {
+        cursor: pointer;
+        width: 117px;
+        height: 100%;
+      }
+      .foto:hover {
+        background-color: rgb(0, 0, 0);
+        opacity: 0.4;
+      }
+      .mat-icon {
+        font-size: 30px;
+        color: rgb (black)
+      }
+      input[type="file"] {
+        display: none;
+      }
+      p{
+        font-size: 9pt;
+      }
+      .centInputImg {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     }
 
     .tempoEs {
@@ -45,43 +69,21 @@
     .valor {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         margin-right: 5%;
         .intval {
             margin-right: 5%;
-            max-width: 50%;
+            max-width: 70%;
         }
         #valor {
-            float: right;
-            width: 86%;
+            // float: right;
+            width: 50%;
         }
         #valorPromocional {
-            float: right;
-            width: 86%;
+            // float: right;
+            width: 50%;
         }
     }
 }
 
-
-
-.foto {
-  cursor: pointer;
-  width: 300px;
-  height: 100%;
-}
-.foto:hover {
-  opacity: 0.3;
-}
-.mat-icon {
-  font-size: 30px;
-  color: rgb(0, 0, 0);
-}
-input[type="file"] {
-  display: none;
-}
-
-.centInputImg {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
