--- a/src/app/core/lib/components/modais/completarCadastro/completarCadastro.component.html
+++ b/src/app/core/lib/components/modais/completarCadastro/completarCadastro.component.html
@@ -10,7 +10,7 @@
                     <div class="absolute top-0 right-0 bottom-0 left-0 w-full h-full z-0">
                         <div (click)="imagemFundo.click()" class="alteraFundo bg-contrast-black center">
                             <mat-icon>add_a_photo</mat-icon>
-                            <input #imagemFundo type="file"(change)="capturarImagem($event)"  />
+                            <input #imagemFundo type="file"(change)="capturarImagem($event, 'imagem de capa')"  />
                         </div>
                     </div>
 
@@ -23,7 +23,7 @@
                             <label [hidden]="mostraIcone">
                                 <mat-icon>add_a_photo</mat-icon>
                             </label>
-                            <input #imagemPerfil type="file" (change)="capturarImagem($event)" />
+                            <input #imagemPerfil type="file" (change)="capturarImagem($event,'imagem de perfil')" />
                         </div>
                         <div class="rounded-circle">
                             <img (mouseover)="mostraIcone=false" (mouseout)="mostraIcone=true"
