Criação do Page layout no Painel

--- a/src/app/views/pages/painel/painel.component.html
+++ b/src/app/views/pages/painel/painel.component.html
@@ -1,1 +1,7 @@
-<vex-construcao-modal></vex-construcao-modal>
+<vex-page-layout mode="card">
+    <vex-page-layout-header fxLayout="column" fxLayoutAlign="right start">
+        <div vexContainer>
+            <h2 class="title m-0">{{ legenda }}</h2>
+        </div>
+    </vex-page-layout-header>
+</vex-page-layout>
