--- a/src/app/core/lib/components/modais/produto/cadastrar-produto/cadastrar-produto.component.scss
+++ b/src/app/core/lib/components/modais/produto/cadastrar-produto/cadastrar-produto.component.scss
@@ -7,6 +7,37 @@
     #inpN {
         width: 100%;
     }
+    #formul{
+      display: flex;
+      justify-content: space-between;
+    }
+    #imagemPerf{
+      margin-right: 15px;
+      .foto {
+        cursor: pointer;
+        width: 117px;
+        height: 100%;
+      }
+      .foto:hover {
+        background-color: rgb(0, 0, 0);
+        opacity: 0.4;
+      }
+      .mat-icon {
+        font-size: 30px;
+        color: rgb (black)
+      }
+      input[type="file"] {
+        display: none;
+      }
+      p{
+        font-size: 9pt;
+      }
+      .centInputImg {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
     .quantEstoque {
         display: flex;
         justify-content: space-between;
@@ -21,6 +52,7 @@
     }
     #descricao {
         width: 100%;
+        margin-top: -2%;
     }
     .toggle{
         margin-bottom: 1rem;
@@ -34,11 +66,9 @@
             max-width: 50%;
         }
         #valor {
-            float: right;
             width: 86%;
         }
         #valorP {
-            float: right;
             width: 86%;
         }
     }
