--- a/src/app/profile/perfil/perfil.component.html
+++ b/src/app/profile/perfil/perfil.component.html
@@ -2,21 +2,37 @@
   <div class="card overflow-hidden">
     <div class="h-64 relative overflow-hidden">
       <img class="w-full h-full object-cover" src="assets/img/demo/landscape.jpg" alt="#">
-      <div class="absolute bg-contrast-black opacity-25 top-0 right-0 bottom-0 left-0 w-full h-full z-0"></div>
 
-      <img class="avatar h-24 w-24 absolute top-6 ltr:left-4 rtl:right-4 sm:hidden"
-           src="assets/img/avatars/1.jpg" alt="#">
+      <div class="absolute top-0 right-0 bottom-0 left-0 w-full h-full z-0">
+        <div (click)="imagemFundo.click()" class="alteraFundo bg-contrast-black center">
+          <mat-icon>add_a_photo</mat-icon>
+          <input #imagemFundo type="file"(change)="capturarImagem($event, 'imagem de capa')"  />
+      </div>
+
+      </div>
+
     </div>
+<!-- foto perfil -->
+    <div (click)="imagemPerfil.click()"  style="margin-right: 10%;" class="z-10 relative -mt-16 px-gutter flex items-center">
 
-    <div class="z-10 relative -mt-16 px-gutter flex items-center">
 
-      <img @scaleIn
-           class="avatar h-24 w-24 flex-none align-start hidden sm:block border-3 border-white"
-           src="assets/img/demo/logo.png" alt="#">
+      <div class="centInputImg">
+        <div class="absolute">
+            <label [hidden]="mostraIcone">
+                <mat-icon>add_a_photo</mat-icon>
+            </label>
+            <input #imagemPerfil type="file" (change)="capturarImagem($event,'imagem de perfil')" />
+        </div>
+        <div class="rounded-circle">
+            <img (mouseover)="mostraIcone=false" (mouseout)="mostraIcone=true"
+                class="foto avatar h-24 w-24 flex-none align-start sm:block border-3 border-white"
+                src="assets/img/demo/logo.png" alt="Imagem cliente">
+        </div>
+    </div>
 
       <div class="max-w-full flex-auto sm:ltr:ml-6 sm:rtl:mr-6">
         <div class="h-16 flex items-center">
-          <h1 @fadeInRight class="headline text-contrast-white m-0">nome</h1>
+          <h1 @fadeInRight class="headline text-contrast-white m-0">{{nomeEstabelecimento}}</h1>
         </div>
 
         <nav class="vex-tabs vex-tabs-dense border-0" mat-tab-nav-bar>
